// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with description and no title 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options Component div 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options Component fieldset 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options disableGutters false 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options disableGutters true 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options disableMargin false 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options disableMargin true 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options disablePadding false 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options disablePadding true 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <div
        class="MuiBox-root css-16twzsx"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options elevation 0 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-c5pdtz-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options elevation 1 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options elevation 2 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 css-z4i9t5-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options fullWidth false 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options fullWidth true 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options icon favorite 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options icon person 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options layout horizontal 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <div
        class="MuiBox-root css-10au80u"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options layout vertical 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with no title or description 1`] = `
<div>
  <ul
    class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
  >
    <div
      class="MuiBox-root css-rwzwky"
    />
  </ul>
</div>
`;

exports[`renders with title and description 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with title and no description 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;
